<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10sp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/payer_txt"
            android:gravity="center"
            android:layout_weight="2"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/et_add_payer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/add_payer_hint"
            android:inputType="text"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10sp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/item_txt"
            android:gravity="center"
            android:layout_weight="2"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/et_add_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/add_item_hint"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10sp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/price_txt"
            android:gravity="center"
            android:layout_weight="2"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/et_add_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/add_price_hint"
            android:inputType="numberSigned|number|numberDecimal"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10sp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/date_txt"
            android:gravity="center"
            android:layout_weight="2"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/et_add_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:inputType="date|time"
            android:text="date"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10sp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/remark_txt"
            android:gravity="center"
            android:layout_weight="2"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/et_add_remark"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_weight="1"
            android:gravity="start"
            android:inputType="textMultiLine|text|textImeMultiLine"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20sp"
        android:text="@string/btn_add_add_txt"
        android:textSize="25sp" />

</LinearLayout>